--- a/index.html
+++ b/index.html
@@ -26,26 +26,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css -->
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
 </head>
 
 
 <body>
     <!-- header -->
-    <!-- unordered list -->
+    <header>
+        <nav>
+            <!-- unordered list -->
+            <ul>
+                <li>GitHub</li>
+                <li>Portfolio</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <h1>New Website</h1>
+        <!-- Section with Graphic/Logo -->
+        <section class="graphic">
+            <section>
+                <section>
 
+                </section>
+            </section>
+        </section>
+        <section>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate inventore mollitia odio eius
+                similique harum rerum corporis sed assumenda nihil vitae, maxime debitis? Voluptas obcaecati a molestias
+                ipsam. Itaque, numquam?</p>
+        </section>
+        <figure>
+            <!-- image element -->
+            <img src="clouds.jpg" alt="Birds in the clouds">
+            <!-- caption -->
+            <figcaption>Photo by <a
+                    href="https://unsplash.com/@kenrickmills?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenrick
+                    Mills</a> on <a
+                    href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </figcaption>
+        </figure>
+    </main>
 
-
-
-
-    <!-- image element -->
-    <!-- caption -->
+    <!-- contact form -->
+    <form action="">
+        <h2>Contact Me</h2>
+        <section class="contact">
+            <label for="name">Name: </label>
+            <input type="text" name="name" id="name">
+            <label for="email">Email: </label>
+            <input type="email" name="email" id="email">
+        </section>
+    </form>
 
     <!-- footer -->
-    <!-- contact form -->
-    <!-- input element -->
-    <!-- type="email" -->
+    <footer>
+        <p>&copy; 2021 New Website Productions</p>
+    </footer>
+
 </body>
 
 </html>
