rearranged folder structure, added header and nav styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Landing Page</title>
 </head>
 
@@ -61,7 +62,7 @@
         </section>
         <figure>
             <!-- image element -->
-            <img src="clouds.jpg" alt="Birds in the clouds">
+            <img src="./assets/images/clouds.jpg" alt="Birds in the clouds">
             <!-- caption -->
             <figcaption>Photo by <a
                     href="https://unsplash.com/@kenrickmills?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenrick
