styled layout for main section

--- a/index.html
+++ b/index.html
@@ -47,41 +47,46 @@
 
     <main>
         <h1>New Website</h1>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate inventore mollitia odio eius
+            similique harum rerum corporis sed assumenda nihil vitae, maxime debitis? Voluptas obcaecati a molestias
+            ipsam. Itaque, numquam?</p>
+
         <!-- Section with Graphic/Logo -->
+
         <section class="graphic">
             <section>
-                <section>
+                <div>
+                    <figure>
 
-                </section>
+                        <!-- image element -->
+
+                        <img src="./assets/images/clouds.jpg" alt="Birds in the clouds">
+
+                        <!-- caption -->
+
+                        <figcaption>Photo by <a
+                                href="https://unsplash.com/@kenrickmills?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenrick
+                                Mills</a> on <a
+                                href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                        </figcaption>
+                    </figure>
+                </div>
             </section>
         </section>
-        <section>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate inventore mollitia odio eius
-                similique harum rerum corporis sed assumenda nihil vitae, maxime debitis? Voluptas obcaecati a molestias
-                ipsam. Itaque, numquam?</p>
-        </section>
-        <figure>
-            <!-- image element -->
-            <img src="./assets/images/clouds.jpg" alt="Birds in the clouds">
-            <!-- caption -->
-            <figcaption>Photo by <a
-                    href="https://unsplash.com/@kenrickmills?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenrick
-                    Mills</a> on <a
-                    href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-            </figcaption>
-        </figure>
-    </main>
 
-    <!-- contact form -->
-    <form action="">
-        <h2>Contact Me</h2>
-        <section class="contact">
-            <label for="name">Name: </label>
-            <input type="text" name="name" id="name">
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email">
-        </section>
-    </form>
+        <!-- contact form -->
+
+        <form id="contact" action="">
+            <h2>Contact Me</h2>
+            <section class="contact">
+                <label for="name">Name: </label>
+                <input type="text" name="name" id="name">
+                <label for="email">Email: </label>
+                <input type="email" name="email" id="email">
+            </section>
+        </form>
+    </main>
 
     <!-- footer -->
     <footer>
