styled anchor tags

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-        <h1>New Website</h1>
+        <h1>Landing Page</h1>
 
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate inventore mollitia odio eius
             similique harum rerum corporis sed assumenda nihil vitae, maxime debitis? Voluptas obcaecati a molestias
