filter inverted colors of image

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <nav>
             <!-- unordered list -->
             <ul>
-                <li>GitHub</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
+                <li><a href="#">GitHub</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -55,24 +55,24 @@
         <!-- Section with Graphic/Logo -->
 
         <section class="graphic">
-            <section>
-                <div>
-                    <figure>
 
-                        <!-- image element -->
+            <div>
+                <figure>
 
-                        <img src="./assets/images/clouds.jpg" alt="Birds in the clouds">
+                    <!-- image element -->
 
-                        <!-- caption -->
+                    <img src="./assets/images/clouds.jpg" alt="Birds in the clouds">
+                </figure>
+            </div>
 
-                        <figcaption>Photo by <a
-                                href="https://unsplash.com/@kenrickmills?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenrick
-                                Mills</a> on <a
-                                href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </section>
+            <!-- caption -->
+
+            <figcaption>Photo by <a
+                    href="https://unsplash.com/@kenrickmills?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kenrick
+                    Mills</a> on <a
+                    href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </figcaption>
+
         </section>
 
         <!-- contact form -->
